Create Blog api controller

--- a/mvc/Views/Home/Index.cshtml
+++ b/mvc/Views/Home/Index.cshtml
@@ -126,19 +126,19 @@
         </div>
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/speedup_icon.png" class="img-responsive" alt="optimazation">
+                <img src="~/Content/Images/speedup_icon.png" class="img-responsive" alt="optimazation"/>
                 <h4>Optimization</h4>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/diagnosis_repair_icon.png" class="img-responsive" alt="diagnotis">
+                <img src="~/Content/Images/diagnosis_repair_icon.png" class="img-responsive" alt="diagnotis"/>
                 <h4>Diagnosis & Repair</h4>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/setup_installation_icon.png" class="img-responsive" alt="installation">
+                <img src="~/Content/Images/setup_installation_icon.png" class="img-responsive" alt="installation"/>
                 <h4>Set-up Install</h4>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/virus_spyware_icon.png" class="img-responsive" alt="installation">
+                <img src="~/Content/Images/virus_spyware_icon.png" class="img-responsive" alt="installation"/>
                 <h4>Virus Removal</h4>
             </div>
         </div>
@@ -234,7 +234,7 @@
             </div>
             <div class="col-md-6 col-md-4 col-xs-12 text-center">
                 <div class="thumbnail">
-                    <img class="img-responsive" src="images/LOW-PRICE.jpg" alt="low-prices">
+                    <img class="img-responsive" src="~/Content/Images/LOW-PRICE.jpg" alt="low-prices"/>
                 </div>
             </div>
             <div class="col-md-6 col-md-4 col-xs-12 text-center">
